# teamproject-competition-server

./: .gitignore  README.md  hockey_combined.db.backup  pyproject.toml
.github/workflows/: lint.yml  lint_comprl_web_reflex.yml  test.yml
.metals/: metals.lock.db  metals.mv.db
client/: __init__.py
comprl/: CHANGELOG.md  README.md  pyproject.toml
comprl-hockey-agent/: README.md  pyproject.toml  requirements.txt  run_client.py
comprl-hockey-agent/src/comprl_hockey_agent/: __init__.py  agents.py
comprl-hockey-game/: README.md  config.toml  container.def  requirements.txt
comprl-web/: README.md  config.toml  config.ts  package-lock.json  package.json  remix.config.js
comprl-web-reflex/: .gitignore  README.md  comprl-web-reflex.def  create_database_tables.py  pyproject.toml  requirements.txt  rxconfig.py
comprl-web-reflex/.web/: bun.lockb  next.config.js  package.json  reflex.install_frontend_packages.cached  reflex.json
comprl-web-reflex/comprl_web/: auth_session.py  base_state.py  components.py  comprl_web.py  config.py  login.py  protected_state.py  registration.py
comprl-web-remix/: package-lock.json  package.json
comprl-web/app/: ConfigProvider.js  config.tsx  root.tsx
comprl/client/: __init__.py  agent.py  client.py  client_protocol.py  example_agents.py  interfaces.py  main.py  networking.py
comprl/scripts/: dummy_user.py  new_user.py  reset.py
comprl/server/: COMP_database.db  __main__.py  app.py  bot.py  factory.py  game_database.py  game_manager.py  game_result.py  hockeygame.py  id_generator.py  interfaces.py  laserhockeygame.py  main.py  managers.py  matchmaking.py  networking.py  parallel.py  player.py  player_manager.py  protocol.py  rock_paper_scissors.py  server.py  user_database.py  util.py
comprl/shared/: commands.py
comprl/tests/: game_database_test.py  reset_database_test.py  user_database_test.py
documentation/: comprl.html  index.html  search.js
documentation/comprl/: client.html  (+2 more)
presentation/: slides.md
server/: __init__.py  commands.py
teamprojekt_competition_server/: .env  __init__.py  example.py
tests/: ampserver.py  default_test.py  game_database_test.py  reset_database_test.py  test_example.py  user_database_test.py
(+183 files in other folders)
