[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "comprl"
version = "0.1.0"
description = "Competition Server for Reinforcement Agents -- Teamprojekt WS 23/24"
authors = [
    {name = "Author Name", email = "optional@example.com"},
]

requires-python = ">=3.10"
dependencies = [
    "twisted==23.10.0",
    "numpy==1.26.2",
    "tomli; python_version<'3.11'",
    "laserhockey @ git+https://git@github.com/martius-lab/laser-hockey-env.git"
]

[project.optional-dependencies]
# Here you can specify optional dependencies (e.g. for tools that are only needed during
# development).  To install them use `pip install ".[dev]"` (the quotes are needed!).

test = ["pytest"]
mypy = ["mypy"]  # here you can also list `types-*` stub packages for third-party packages

# For convenience: Install all development-dependencies
dev = [
    "comprl[test]",
    "comprl[mypy]",
    "ruff",
]


[tool.ruff]
lint.select = [
    "E",
    "F",
    "B",  # bugbear
    "D100", "D101", "D102", "D103",  # Complain about missing docstrings
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # don't enforce docstrings in test files
"examples/*" = ["D"]  # don't enforce docstrings in examples


[tool.mypy]
exclude = ["build", "examples"]

[[tool.mypy.overrides]]
# here you can list third-party packages for which no type hints are provided (to avoid
# complaints from mypy)
module = "laserhockey.*"
ignore_missing_imports = true
